src/test/deca/context/valid/SansObjet/DeclVar-EQ-boolean-boolean-boolean.deca
// Description:
//    Declaration of a boolean variable using == operation between a boolean variable and boolean .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    boolean y = false; 
    boolean z = x == y ; 
}
