src/test/deca/context/invalid/SansObjet/DeclVar-Mult-boolean-boolean-string.deca
// Description:
//    Declaration of a boolean variable using * operation between a boolean variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  false; 
    string y = "World"; 
    boolean z = false * "World"; 
}
